--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,29 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+
+<h2>Editing Book</h2>
+
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>  
+  </ul>
+<% end %>  
+
+<%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
+<p>
+  Title:<br>
+  <%= f.text_field :title %>
+</p>
+<p>
+  Body:<br>
+  <%= f.text_area :body %>
+</p>
+<p><%= f.submit "Update Book" %></p>
+
+<% end %>
+
+<p>
+  <%= link_to "Show", book_path(@book) %> |
+  <%= link_to "Back", books_path %>
+</p>
