--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,29 +1,48 @@
 <h2>Books</h2>
 
 <table>
-  <% @books.each do |book| %>
-  <tr>
-    <th>Title</th>
-    <th>Body</th>
-    <th></th>
-  </tr>
-  <tr>
-    <td><%= book.title %></td>
-    <td><%= book.body %></td>
-    <td>
-      Show Edit Destroy
-    </td>
-  </tr>
-  <% end %>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th> </th>
+      <th> </th>
+      <th> </th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+      <td><%= link_to "Show", book_path(book.id) %></td>
+      <td><%= link_to "edit", edit_book_path(book.id) %></td>
+      <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+    </tr>
+    <% end %>
+  </tbody> 
 </table>  
 
 
-<%= form_with model: Book.new do |f| %>
+
 <h2>New book</h2>
-<h4>Title</h4>
-<%= f.text_field :title %>
-<h4>Body</h4>
-<%= f.text_area :body %>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>  
+  </ul>
+<% end %>  
+
+<%= form_with model: @book do |f| %>
+    <p>Title<br>
+    <%= f.text_field :title %>
+    </p>
+    
+    <p>Body<br>
+    <%= f.text_area :body %>
+    </p>
 <p><%= f.submit "Create Book" %></p>
 
 <% end %>
